--- a/Readme
+++ b/Readme
@@ -1,4 +1,6 @@
 mcHF Pro is the DDC/DUC iteration of the mcHF project. Still in very early Alpha stage, so treat all uploads as preliminary.
 
+Any ideas or feedback are appreciated. Please drop me a mail at djchrismarc at gmail.
+
 73, Chris
 M0NKA
